<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/person_mugshot_label"
                tools:src="@drawable/sheldon_cooper" />

            <TextView
                android:id="@+id/characterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/person_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/professionRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/characterName"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/person_profession_label" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="2dp" />

                <TextView
                    android:id="@+id/profession"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/person_profession" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/realNameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/professionRow"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/person_realname_label" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="2dp" />

                <TextView
                    android:id="@+id/realname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/person_realname" />
            </LinearLayout>

            <TextView
                android:id="@+id/personDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/realNameRow"
                android:padding="8dp"
                android:lineSpacingMultiplier="1.25"
                android:singleLine="false" />

        </RelativeLayout>
    </ScrollView>


</LinearLayout>
